// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Local Database Database CRUD should add an item to database 1`] = `
Array [
  Object {
    "Key": "/verdaccio-s3-db.json",
    "Size": 31,
  },
]
`;

exports[`Local Database Database CRUD should remove an item to database 1`] = `
Array [
  Object {
    "Key": "/verdaccio-s3-db.json",
    "Size": 23,
  },
]
`;

exports[`Local Database manages a secret should create get secret 1`] = `Array []`;

exports[`Local Database manages a secret should create set secret 1`] = `
Array [
  Object {
    "Key": "/verdaccio-s3-db.json",
    "Size": 37,
  },
]
`;

exports[`Local Database should create an instance 1`] = `Array []`;
